RESOLVED FIXED25052
With accelerated compositing, element positions are sometimes wrong.
https://bugs.webkit.org/show_bug.cgi?id=25052
Summary With accelerated compositing, element positions are sometimes wrong.
Simon Fraser (smfr)
Reported 2009-04-04 22:22:13 PDT
When dynamically creating compositing layers, those layers are sometimes rendered in the wrong location.
Attachments
Testcase (1.17 KB, text/html)
2009-04-04 22:22 PDT, Simon Fraser (smfr)
no flags
Patch, testcase, changelog (8.29 KB, patch)
2009-04-05 18:49 PDT, Simon Fraser (smfr)
darin: review+
Simon Fraser (smfr)
Comment 1 2009-04-04 22:22:49 PDT
Created attachment 29262 [details] Testcase
Simon Fraser (smfr)
Comment 2 2009-04-04 22:23:25 PDT
The problem here is that calculateCompositedBounds() is being called before we've determined which descendent layers are going to be compositing, so it returns the wrong answer.
Simon Fraser (smfr)
Comment 3 2009-04-05 18:49:56 PDT
Created attachment 29269 [details] Patch, testcase, changelog
Darin Adler
Comment 4 2009-04-06 09:02:18 PDT
Comment on attachment 29269 [details] Patch, testcase, changelog r=me
Simon Fraser (smfr)
Comment 5 2009-04-06 10:52:38 PDT
Note You need to log in before you can comment on or make changes to this bug.